--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       - traefik.http.routers.blog.tls=true
       - traefik.http.routers.blog.tls.certresolver=lets-encrypt
       - traefik.port=3000
+    networks:
+      - internal
+      - web
 
   postgres:
     image: postgres
@@ -32,5 +35,10 @@ services:
       - '5432:5432'
     volumes:
       - docker-nest-postgres:/var/lib/postgresql/data
+    networks:
+      - internal
+    labels:
+      - traefik.enable=false
+
 volumes:
   docker-nest-postgres:
